remove bottom hardstop

--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,8 @@ idea {
 remotes {
     rio {
 //        host = 'roboRIO-449-frc.local'  //Default, sometimes doesn't work
-//        host = '172.22.11.2' //USB B cable
-        host = '10.4.49.2' //Radio/ethernet IP
+        host = '172.22.11.2' //USB B cable
+//        host = '10.4.49.2' //Radio/ethernet IP
         user = 'lvuser'
         knownHosts = allowAnyHosts
     }
