--- a/src/main/resources/map.yml
+++ b/src/main/resources/map.yml
@@ -925,6 +925,20 @@ buttons:
 #  org.usfirst.frc.team449.robot.commands.limelight.SetTracking:
 #    '@id': tracking
 #    track: false
+autoStartupCommand:
+  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.TwoSideMPSubsystem.commands.GoToVisionTargetLimelight:
+    '@id': goToVisionTarget
+    subsystem:
+      org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
+        drive
+    pathRequester:
+      '@id': pathRequester
+      address: "tcp://10.4.49.2:5800"
+      wheelbase: 2.4
+    maxVel: 7
+    maxAccel: 12
+    maxJerk: 16
+    deltaTime: 0.02
 #autoStartupCommand:
 #  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.commands.GetPathFromJetson:
 #    '@id': getPath
@@ -941,30 +955,30 @@ buttons:
 #    maxJerk: 16
 #    deltaTime: 0.02
 #    resetPosition: true
-autoStartupCommand:
-  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.commands.GetPathFromJetson:
-    '@id': getPath
-    pathRequester:
-      '@id': pathRequester
-      address: "tcp://10.4.49.2:5800"
-      wheelbase: 2.4
-    maxVel: 7
-    maxAccel: 12
-    maxJerk: 16
-    deltaTime: 0.02
-    resetPosition: true
-    xSupplier:
-      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-        '@id': limelightX
-        value: x
-    ySupplier:
-      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-        '@id': limelightY
-        value: y
-    thetaSupplier:
-      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-        '@id': limelightYaw
-        value: yaw
+#autoStartupCommand:
+#  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.commands.GetPathFromJetson:
+#    '@id': getPath
+#    pathRequester:
+#      '@id': pathRequester
+#      address: "tcp://10.4.49.2:5800"
+#      wheelbase: 2.4
+#    maxVel: 7
+#    maxAccel: 12
+#    maxJerk: 16
+#    deltaTime: 0.02
+#    resetPosition: true
+#    xSupplier:
+#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
+#        '@id': limelightX
+#        value: x
+#    ySupplier:
+#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
+#        '@id': limelightY
+#        value: y
+#    thetaSupplier:
+#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
+#        '@id': limelightYaw
+#        value: yaw
 #autoStartupCommand:
 #    org.usfirst.frc.team449.robot.commands.general.CommandSequence:
 #        '@id': characterizeDrive
