--- a/src/main/resources/map.yml
+++ b/src/main/resources/map.yml
@@ -165,7 +165,7 @@ logger:
                 powerToCoefficientMap: !!map
                   1 : .5
                   3 : .5
-            scale: .65
+            scale: .7
         fwdThrottle:
           org.usfirst.frc.team449.robot.oi.throttles.ThrottleSum:
             '@id': fwdThrottle
@@ -260,6 +260,142 @@ logger:
         '@id': digitalInput
         channel: 0
         name: "OnLeft"
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        &gyroMP
+        '@id': startToLeftCargoShip
+        absoluteTolerance: 2
+        deadband: 2
+        inverted: false
+        kP: 0.05
+        kI: 0.0
+        kD: 0.03
+        subsystem:
+          org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
+            drive
+        left:
+          '@id': startToLeftCargoShipLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftStartToFLProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': startToLeftCargoShipRight
+          filename: "/home/lvuser/449_resources/robot2019RightStartToFLProfile.csv"
+          inverted: false
+          resetPosition: true
+        timeout: 10
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': startToRightCargoShip
+        left:
+          '@id': startToRightCargoShipLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftStartToFRProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': startToRightCargoShipRight
+          filename: "/home/lvuser/449_resources/robot2019RightStartToFRProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftCargoShipToLoadRev
+        right:
+          '@id': leftCargoShipToLoadRevRight
+          filename: "/home/lvuser/449_resources/robot2019LeftFLToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        left:
+          '@id': leftCargoShipToLoadRevLeft
+          filename: "/home/lvuser/449_resources/robot2019RightFLToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightCargoShipToLoadRev
+        right:
+          '@id': rightCargoShipToLoadRevRight
+          filename: "/home/lvuser/449_resources/robot2019LeftFRToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        left:
+          '@id': rightCargoShipToLoadRevLeft
+          filename: "/home/lvuser/449_resources/robot2019RightFRToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': cargoShipToLoadFwd
+        left:
+          '@id': cargoShipToLoadFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftFToLoadFwdProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': cargoShipToLoadFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightFToLoadFwdProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftLoadToCargoShipRev
+        right:
+          '@id': leftLoadToCargoShipRevRight
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToLeftRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        left:
+          '@id': leftLoadToCargoShipRevLeft
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLeftRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightLoadToCargoShipRev
+        right:
+          '@id': rightLoadToCargoShipRevRight
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToRightRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        left:
+          '@id': rightLoadToCargoShipRevLeft
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToRightRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftLoadToCargoShipFwd
+        left:
+          '@id': leftLoadToCargoShipFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToLFProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': leftLoadToCargoShipFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLFProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightLoadToCargoShipFwd
+        left:
+          '@id': rightLoadToCargoShipFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToRFProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': rightLoadToCargoShipFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLFProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
     - org.usfirst.frc.team449.robot.jacksonWrappers.FPSTalon:
         &legElevator
         '@id': backLegElevatorTalon
@@ -304,7 +440,7 @@ logger:
               org.usfirst.frc.team449.robot.generalInterfaces.doubleUnaryOperator.feedForwardComponent.FeedForwardKaKvComponent:
                 kVFwd: 0.42
                 kAFwd: 0.01
-                interceptVoltageFwd: 6.14
+                interceptVoltageFwd: 5.54
                 interceptVoltageRev: 0
     - org.usfirst.frc.team449.robot.jacksonWrappers.FPSTalon:
         '@id': backLegDriveTalon
@@ -335,6 +471,29 @@ defaultCommands:
     command:
       org.usfirst.frc.team449.robot.commands.multiInterface.drive.UnidirectionalNavXShiftingDefaultDrive:
         defaultDriveCommand
+  - subsystem:
+      org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
+        '@id': sliderMotor
+        motor:
+          org.usfirst.frc.team449.robot.jacksonWrappers.FPSTalon:
+            lateralSlider
+    command:
+      org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.FollowDoubleSupplier:
+        &autoadjust
+        '@id': alignSlider
+        subsystem:
+          org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
+            sliderMotor
+        doubleSupplier:
+          org.usfirst.frc.team449.robot.components.LimeLightAngularToDistanceComponent:
+            angularInput:
+              org.usfirst.frc.team449.robot.components.LimeLightComponent:
+                '@id': limelightX
+                value: x
+            distanceToTarget:
+              org.usfirst.frc.team449.robot.components.LimeLightDistanceComponentTilted:
+                  limelightHeight: 0.5354
+                  limelightAngleDown: 25
 teleopStartupCommand:
   org.usfirst.frc.team449.robot.commands.general.ParallelCommandGroup:
     '@id': teleopStartupCommand
@@ -433,7 +592,7 @@ buttons:
           throttle:
             org.usfirst.frc.team449.robot.oi.throttles.ThrottleBasic:
               '@id': mechRightTrigger
-              axis: 2
+              axis: 3
               stick:
                 org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
                   mechanismsGamepad
@@ -446,8 +605,8 @@ buttons:
               piston:
                 '@id': hatchMechExtenderPiston
                 module: 0
-                forward: 3
-                reverse: 2
+                forward: 2
+                reverse: 3
       action: WHEN_PRESSED
     - button:
         org.usfirst.frc.team449.robot.oi.buttons.TriggerButton:
@@ -456,7 +615,7 @@ buttons:
           throttle:
             org.usfirst.frc.team449.robot.oi.throttles.ThrottleBasic:
               '@id': mechLeftTrigger
-              axis: 3
+              axis: 2
               stick:
                 org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
                   mechanismsGamepad
@@ -503,23 +662,23 @@ buttons:
       action: WHEN_PRESSED
     - button:
         org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
-          enableSlider
+          '@id': disableSliderButton
+          joystick:
+            org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
+              mechanismsGamepad
+          buttonNumber: 2
       command:
-        org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.SetAnalogMotorWithRequires:
-          '@id': centerHatchMech
-          subsystem:
-            org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
-              sliderMotor
-          setpoint: 0
-      action: WHEN_RELEASED
+        org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.AnalogPIDCommand:
+          disableTrackingSequence
+      action: CANCEL_WHEN_PRESSED
     - button:
         org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
-          enableSlider
+          stopResetSlider
       command:
         org.usfirst.frc.team449.robot.commands.limelight.SetTracking:
-          '@id': disableLimelight
-          track: false
-      action: WHEN_RELEASED
+          '@id': enableLimelight
+          track: true
+      action: WHEN_PRESSED
     - button:
         org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
           '@id': cargoIntakeButton
@@ -713,12 +872,6 @@ buttons:
             org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.SubsystemClimber2019:
               climber
           extendDistance: 0.6
-#          maxVelExtend: 0.75
-#          maxAccelExtend: 0.75
-          maxVelRetract: 6
-          maxAccelRetract: 8
-          maxVelNudge: 1.2
-          maxAccelNudge: 1.2
       action: WHEN_PRESSED
     - button:
         org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
@@ -738,32 +891,60 @@ buttons:
               drive
       action: WHEN_PRESSED
     - button:
-        org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
-          '@id': retractElevatorsButton
+        org.usfirst.frc.team449.robot.oi.buttons.dPadButton:
+          '@id': secondHatchAutoButton
           joystick:
             org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
-              climbOverrideController
-          buttonNumber: 3
+              mechanismsGamepad
+          angle: 0
       command:
-        org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.commands.RetractElevators:
-          '@id': retractElevators
-          climber:
-            org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.SubsystemClimber2019:
-              climber
-          drive:
-            org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
-              drive
-          driveCommand:
-            org.usfirst.frc.team449.robot.commands.multiInterface.drive.UnidirectionalNavXShiftingDefaultDrive:
-              <<: *defaultDriveCommand
-              '@id': reenableDefaultDriveCommand
-              driveStraightLoopEntryTimer:
-                driveStraightLoopEntryTimer
-              autoshiftComponent:
-                autoshiftComponent
-          maxVelRetract: 4
-          maxAccelRetract: 6
+        org.usfirst.frc.team449.robot.commands.autonomous.Auto2019DoubleHatch:
+          '@id': secondHatchAuto
+          hatchMech:
+            org.usfirst.frc.team449.robot.subsystem.interfaces.solenoid.SolenoidSimple: hatchSolenoid
+          leftToLoadRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftCargoShipToLoadRev
+          rightToLoadRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightCargoShipToLoadRev
+          toLoadFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: cargoShipToLoadFwd
+          leftLoadToFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftLoadToCargoShipFwd
+          rightLoadToFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightLoadToCargoShipFwd
+          leftLoadToRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftLoadToCargoShipRev
+          rightLoadToRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightLoadToCargoShipRev
+          NavXTurnToAngleCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.drive.NavXTurnToAngle:
+              '@id': autoToLoadTurn
+              setpoint: 180
+              subsystem:
+                org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
+                  drive
+              timeout: 2
+              absoluteTolerance: 1
+          startingSideSwitch:
+            org.usfirst.frc.team449.robot.jacksonWrappers.MappedDigitalInput: digitalInput
       action: WHEN_PRESSED
+#    - button:
+#        org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
+#          '@id': retractElevatorsButton
+#          joystick:
+#            org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
+#              climbOverrideController
+#          buttonNumber: 3
+#      command:
+#        org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.commands.AbortClimb:
+#          '@id': retractElevators
+#          climber:
+#            org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.SubsystemClimber2019:
+#              climber
+#          drive:
+#            org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
+#              drive
+#      action: WHEN_PRESSED
 #    - button:
 #        org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
 #          '@id': testLiftButton
@@ -785,79 +966,49 @@ buttons:
 #            org.usfirst.frc.team449.robot.subsystem.singleImplementation.climber2019.SubsystemClimber2019:
 #              climber
 #      action: WHEN_PRESSED
-#autoStartupCommand:
-#  org.usfirst.frc.team449.robot.commands.limelight.SetTracking:
-#    '@id': tracking
-#    track: false
 autoStartupCommand:
-  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.TwoSideMPSubsystem.commands.GoToVisionTargetLimelight:
-    '@id': goToVisionTarget
-    subsystem:
-      org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
-        drive
-    pathRequester:
-      '@id': pathRequester
-      address: "tcp://10.4.49.2:5800"
-      wheelbase: 2.4
-    maxVel: 7
-    maxAccel: 12
-    maxJerk: 16
-    deltaTime: 0.02
+  org.usfirst.frc.team449.robot.commands.autonomous.Auto2018SingleHatch:
+    '@id': autoCommand
+    adjustCommand:
+      org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.FollowDoubleSupplier:
+        <<: *autoadjust
+        '@id': autoautoadjust
+        doubleSupplier:
+          org.usfirst.frc.team449.robot.components.LimeLightAngularToDistanceComponent:
+            angularInput:
+              org.usfirst.frc.team449.robot.components.LimeLightComponent:
+                limelightX
+            distanceToTarget:
+              org.usfirst.frc.team449.robot.components.LimeLightDistanceComponentSimple: {}
+    drive:
+      org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable: drive
+    hatchMech:
+      org.usfirst.frc.team449.robot.subsystem.interfaces.solenoid.SolenoidSimple: hatchSolenoid
+    angularCompliance:
+      org.usfirst.frc.team449.robot.subsystem.interfaces.solenoid.SolenoidSimple: hatchMechExtenderSolenoid
+    leftDriveCommand:
+      org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: startToLeftCargoShip
+    rightDriveCommand:
+      org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: startToRightCargoShip
+    startingSideSwitch:
+      org.usfirst.frc.team449.robot.jacksonWrappers.MappedDigitalInput: digitalInput
+    driveDefaultCommand:
+      org.usfirst.frc.team449.robot.commands.multiInterface.drive.UnidirectionalNavXShiftingDefaultDrive:
+        <<: *defaultDriveCommand
+        '@id': autoDefaultDriveCommand
+        driveStraightLoopEntryTimer:
+          driveStraightLoopEntryTimer
+        autoshiftComponent:
+          autoshiftComponent
+    compressor:
+      org.usfirst.frc.team449.robot.subsystem.singleImplementation.pneumatics.Pneumatics: pneumatics
 #autoStartupCommand:
-#  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.TwoSideMPSubsystem.commands.GoToVisionTargetLimelightRecursive:
-#    '@id': goToVisionTarget
+#  org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.AnalogMotorVoltageRamp:
+#    '@id': characterizeSlider
 #    subsystem:
-#      org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
-#        drive
-#    pathRequester:
-#      '@id': pathRequester
-#      address: "tcp://10.4.49.2:5800"
-#      wheelbase: 2.4
-#    maxVel: 7
-#    maxAccel: 12
-#    maxJerk: 16
-#    deltaTime: 0.02
-#    regenInterval: 1
-#autoStartupCommand:
-#  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.commands.GetPathFromJetson:
-#    '@id': getPath
-#    pathRequester:
-#      '@id': pathRequester
-#      address: "tcp://10.4.49.2:5800"
-#      wheelbase: 2.4
-#    waypoints:
-#      - x: 20
-#        y: 10
-#        theta: 5
-#    maxVel: 7
-#    maxAccel: 12
-#    maxJerk: 16
-#    deltaTime: 0.02
-#    resetPosition: true
-#autoStartupCommand:
-#  org.usfirst.frc.team449.robot.subsystem.interfaces.motionProfile.commands.GetPathFromJetson:
-#    '@id': getPath
-#    pathRequester:
-#      '@id': pathRequester
-#      address: "tcp://10.4.49.2:5800"
-#      wheelbase: 2.4
-#    maxVel: 7
-#    maxAccel: 12
-#    maxJerk: 16
-#    deltaTime: 0.02
-#    resetPosition: true
-#    xSupplier:
-#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-#        '@id': limelightX
-#        value: x
-#    ySupplier:
-#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-#        '@id': limelightY
-#        value: y
-#    thetaSupplier:
-#      org.usfirst.frc.team449.robot.components.LimeLightComponent:
-#        '@id': limelightYaw
-#        value: yaw
+#      org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
+#        sliderMotor
+#    voltsPerSecond: 0.5
 #autoStartupCommand:
 #    org.usfirst.frc.team449.robot.commands.general.CommandSequence:
 #        '@id': characterizeDrive
